feat: implement search by last_name
