# openapi-v1.yml
@@ -67,6 +67,43 @@ paths:
       responses:
         "201":
           description: "Successfully created employee"
+  /employees/search:
+    get:
+      operationId: "employees.search_employees"
+      tags:
+        - "Employees"
+      summary: "Search for an employee"
+      responses:
+        "200":
+          description: "Successfully found employee"
+        "404":
+          description: "Cannot find employee"
+      parameters:
+        - in: query
+          name: first_name
+          schema:
+            type: string
+          description: The first name of the employee
+        - in: query
+          name: last_name
+          schema:
+            type: string
+          description: The last name of the employee
+        - in: query
+          name: gender
+          schema:
+            type: string
+          description: The gender of the employee
+        - in: query
+          name: email
+          schema:
+            type: string
+          description: The email of the employee
+        - in: query
+          name: base_salary
+          schema:
+            type: integer
+          description: The salary of the employee
   /notes:
     post:
       operationId: "notes.create"
